# photoflow

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: README.md  cli_examples.sh  demo_photoflow.py  demo_showcase.sh  individual_tests.sh  metadata_demo.sh  quick_test.sh
photoflow/: __init__.py
photoflow/actions/: __init__.py  advanced.py  basic.py  enhanced.py  metadata.py
photoflow/cli/: __init__.py  main.py  metadata.py
photoflow/core/: __init__.py  actions.py  duplicate_detection.py  fields.py  image_loader.py  image_processor.py  metadata.py  mixins.py  models.py  serialization.py  settings.py  templates.py
photoflow/gui/: __init__.py  app.py
tests/: __init__.py
tests/e2e/: __init__.py
tests/fixtures/: test_metadata.json
tests/fixtures/test_images/: landscape_4000x3000.jpg~
tests/fixtures/test_images_processed/: landscape_with_metadata.jpg~  landscape_with_metadata_metadata.json
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_actions.py  test_cli_working.py  test_fields.py  test_mixins.py  test_models.py  test_package.py  test_serialization.py  test_settings.py  test_templates.py
tests/unit/actions/: test_advanced.py  test_basic.py  test_coverage.py  test_coverage_boost.py  test_enhanced.py  test_metadata.py
tests/unit/cli/: test_main.py  test_metadata.py
tests/unit/core/: test_actions.py  test_duplicate_detection.py  test_fields.py  test_image_loader.py  test_image_processor.py  test_metadata.py  test_mixins.py  test_models.py  test_serialization.py  test_settings.py  test_templates.py  test_templates_coverage_boost.py
tests/unit/gui/: test_app.py
tests/utils/: __init__.py  test_image_generator.py
